--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "path": "^0.12.7"
+    "express-session": "^1.17.2",
+    "googleapis": "^39.2.0",
+    "mongoose": "^6.3.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "styles": "^0.2.1"
   }
 }
