--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "fullcalendar": "^5.11.0",
     "googleapis": "^39.2.0",
     "mongoose": "^6.3.0",
     "passport": "^0.5.2",
