--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.1",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "fullcalendar": "^5.11.0",
     "googleapis": "^39.2.0",
     "mongoose": "^6.3.0",
     "passport": "^0.5.2",
